--- a/index.html
+++ b/index.html
@@ -14,13 +14,14 @@
         </figure>
 
         <nav>
-            <ul class="navb__menu">
+            <ul class="navb__menu desktop">
                 <li>Home</li>
                 <li>About us</li>
                 <li>Blogs</li>
                 <li>contact</li>
                 <li>Try now</li>
             </ul>
+            <i class="fas fa-bars mobile"></i>
         </nav>
     </header>
 
